refactored tests according to all the changes